2011-01-31  Nick Clifton  <nickc@redhat.com>

	* config/mn10300/mn10300.c (mn10300_regno_in_class_p): Check for
	reg_renumber returning an INVALID_REGNUM.

2011-01-31  Alexandre Oliva  <aoliva@redhat.com>

	PR libgcj/44341
	* doc/install.texi: Document host options discarded when cross
	configuring target libraries.

2011-01-31  Alexandre Oliva  <aoliva@redhat.com>

	Reverted:
	2011-01-25  Alexandre Oliva  <aoliva@redhat.com>
	PR debug/45136
	PR debug/45130
	* haifa-sched.c (get_ebb_head_tail): Move notes across boundary
	debug insns.
	(no_real_insns_p, schedule_block, set_priorities): Drop special
	treatment of boundary debug insns.
	* sched-deps.c (sd_init_insn, sd_finish_insn): Don't mark debug
	insns.
	* sched-ebb.c (schedule_ebbs): Don't skip debug insns.
	* sched-int.h (DEBUG_INSN_SCHED_P): Remove.
	(BOUNDARY_DEBUG_INSN_P): Likewise.
	(SCHEDULE_DEBUG_INSN_P): Likewise.
	* sched-rgn.c (init_ready_list): Drop special treatment of
	boundary debug insns.
	* final.c (rest_of_clean-state): Clear notes' BB.

2011-01-31  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (print_operand): Rearrange addends in
	toc relative expressions as we do in print_operand_address.

2011-01-30  Kazu Hirata  <kazu@codesourcery.com>

	* doc/extend.texi: Follow spelling conventions.
	* doc/invoke.texi: Fix a typo.

2011-01-30  Joseph Myers  <joseph@codesourcery.com>

	* config/hpux11.opt: New.
	* config.gcc (hppa*64*-*-hpux11*, hppa[12]*-*-hpux11*,
	ia64*-*-hpux*): Use hpux11.opt.

2011-01-30  Jonathan Yong <jon_y@users.sourceforge.net>

	* config.gcc (i[34567]86-*-pe | i[34567]86-*-cygwin*): Add t-dfprules
	to tmake_file.

2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (hppa-hp-hpux10): Remove references to HP
	support sites.

2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Binaries): Remove outdated reference for
	Motorola 68HC11/68HC12 downloads.

2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>
