@@ -1137,10 +1137,12 @@ rx_get_stack_layout (unsigned int * lowest,
   for (save_mask = high = low = 0, reg = 1; reg < CC_REGNUM; reg++)
     {
       if ((df_regs_ever_live_p (reg)
-	   /* Always save all call clobbered registers inside interrupt
-	      handlers, even if they are not live - they may be used in
-	      routines called from this one.  */
-	   || (call_used_regs[reg] && is_interrupt_func (NULL_TREE)))
+	   /* Always save all call clobbered registers inside non-leaf
+	      interrupt handlers, even if they are not live - they may
+	      be used in (non-interrupt aware) routines called from this one.  */
+	   || (call_used_regs[reg]
+	       && is_interrupt_func (NULL_TREE)
+	       && ! current_function_is_leaf))
 	  && (! call_used_regs[reg]
 	      /* Even call clobbered registered must
 		 be pushed inside interrupt handlers.  */
